update Netty, ignore "Connection reset by peer" from epoll