@@ -15,6 +15,7 @@ ENV MAX_FILE_CACHE_SIZE 8
 EXPOSE 80
 ENTRYPOINT ["java", "-server", "-Dfile.encoding=UTF-8", "-Djava.awt.headless=true", \
   "-Xbootclasspath/a:lib/marlin-0.5.5-Unsafe.jar", \
+  "-XX:+UseConcMarkSweepGC", \
   "-Dsun.java2d.renderer=org.marlin.pisces.PiscesRenderingEngine", "-Dsun.java2d.renderer.useRef=hard", \
   "-Dorg.slf4j.simpleLogger.showLogName=false", \
   "-Dio.netty.machineId=9e43d860", \
